# ai_agent_mcp

./: .env  Makefile  README.md  pyproject.toml
agent/: ai_agent.py
docker/: Dockerfile  docker-compose.yml  requirements.txt
mcp-server/: binance.py  cat_fact.py  chuck_noris_joke.py
