[project]
name = "ai_agent_mcp"
version = "0.1.0"
description = "example of implementation of MCP with langchain/langgraph framework"
requires-python = ">=3.10"
dependencies = [
    # From binance-mcp
    "mcp[cli]==1.6.0",
    "requests==2.32.3", # Also for llm-tool-use
    # From llm-tool-use
    "python-dotenv==1.1.0",
    # langchain
    "langchain==0.3.25",
    "langchain-core==0.3.59",
    "langchain-mcp-adapters==0.0.9",
    "langgraph==0.4.3",
    "black>=25.1.0",
    "langchain-ollama==0.3.2",
]

[project.optional-dependencies]


[tool.ruff]
line-length = 79 

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

smolagents = [
    "torch",
    "smolagents[mcp]",
    "transformers",
]